Fix: Menubar - Prevent shifts when clicked #207

--- a/userChrome.css
+++ b/userChrome.css
@@ -862,7 +862,8 @@
 
   /*= Global Menu - Set Padding ==============================================*/
   /* Vertical Align - Center & Height: 100%  */
-  #menubar-items {
+  #menubar-items,
+  #main-menubar {
     display: flex !important;
   }
 
